fix: Address all deployment issues found during Ubuntu testing
- Fix port conflicts between Kubernetes and Docker Compose
  - Add automatic deployment method detection
  - Prevent simultaneous K8s and Docker deployments
  - User can now choose deployment method

- Fix Memgraph CrashLoopBackOff issue
  - Add security contexts (fsGroup, runAsUser, runAsNonRoot)
  - Configure proper resource limits
  - Set correct permissions for volumes

- Handle missing repositories gracefully
  - Check if repos exist before cloning
  - Create placeholder modules for missing repos
  - Allow system to start without all modules

- Add missing prerequisites checks
  - Auto-install python3-venv if missing
  - Auto-install pip3 if missing
  - Check Docker permissions and provide fixes
  - Clear instructions for permission issues

- Add dedicated Kubernetes start script
  - start-autoweave-k8s.sh for pure K8s deployment
  - Automatic port-forward management with PID tracking
  - Clean shutdown of port-forwards

- Update stop script to handle K8s port-forwards
  - Kill all port-forward processes on stop
  - Clean up PID file

These fixes resolve all issues identified in DEPLOYMENT_TEST_REPORT.md
and DEPLOYMENT_ISSUES.md from Ubuntu 25.04 testing.

--- a/k8s/memory/memgraph.yaml
+++ b/k8s/memory/memgraph.yaml
@@ -65,6 +65,9 @@ spec:
       labels:
         app: memgraph
     spec:
+      securityContext:
+        fsGroup: 1000
+        runAsNonRoot: true
       containers:
       - name: memgraph
         image: memgraph/memgraph:latest
@@ -89,6 +92,10 @@ spec:
           mountPath: /var/lib/memgraph
         - name: memgraph-log
           mountPath: /var/log/memgraph
+        securityContext:
+          runAsUser: 1000
+          runAsGroup: 1000
+          allowPrivilegeEscalation: false
         resources:
           requests:
             memory: "1Gi"
