fix: Final deployment fixes for Ubuntu testing
- Fix Memgraph executable path issue
  - Use full path: /usr/lib/memgraph/memgraph
  - Add --telemetry-enabled=false flag
  - Should resolve CrashLoopBackOff error

- Improve kubectl cluster detection
  - Get current context first
  - Handle Kind clusters specially
  - Better error messages

- Add automatic mock module creation
  - Create mock autoweave-core if missing
  - Mock server responds to /api/health
  - Allows testing without all modules

These are the final fixes needed based on UPDATE_TEST_REPORT.md
The deployment should now work completely on Ubuntu 25.04.

--- a/k8s/memory/memgraph.yaml
+++ b/k8s/memory/memgraph.yaml
@@ -85,8 +85,8 @@ spec:
               name: memgraph-secret
               key: password
               optional: true
-        command: ["memgraph"]
-        args: ["--log-level=INFO", "--also-log-to-stderr", "--storage-recover-on-startup=true"]
+        command: ["/usr/lib/memgraph/memgraph"]
+        args: ["--log-level=INFO", "--also-log-to-stderr", "--storage-recover-on-startup=true", "--telemetry-enabled=false"]
         volumeMounts:
         - name: memgraph-storage
           mountPath: /var/lib/memgraph
