fix: Comprehensive Memgraph segmentation fault fixes
- Update memgraph.yaml with proper security context
  - Set runAsNonRoot to false
  - Run as root user (uid 0) to avoid permission issues
  - Add SYS_NICE and IPC_LOCK capabilities
  - Use specific stable version 2.11.1 instead of latest
  - Disable WAL and snapshots to reduce I/O issues

- Create memgraph-minimal.yaml as alternative
  - Use Deployment instead of StatefulSet
  - Add initContainer to fix permissions
  - Use emptyDir volumes (no persistence)
  - Reduced resource requirements
  - Fallback mode if main process fails

- Add debug-memgraph.sh script
  - Diagnose pod issues
  - Check CPU compatibility (SSE4.2)
  - Show logs and events
  - Provide alternative solutions

This should resolve the segmentation fault issues reported in
FINAL_STATUS_REPORT.md while keeping Memgraph as part of the solution.

--- a/k8s/memory/memgraph.yaml
+++ b/k8s/memory/memgraph.yaml
@@ -67,10 +67,10 @@ spec:
     spec:
       securityContext:
         fsGroup: 1000
-        runAsNonRoot: true
+        runAsNonRoot: false
       containers:
       - name: memgraph
-        image: memgraph/memgraph:latest
+        image: memgraph/memgraph:2.11.1
         ports:
         - containerPort: 7687
           name: bolt
@@ -86,16 +86,29 @@ spec:
               key: password
               optional: true
         command: ["/usr/lib/memgraph/memgraph"]
-        args: ["--log-level=INFO", "--also-log-to-stderr", "--storage-recover-on-startup=true", "--telemetry-enabled=false"]
+        args: [
+          "--log-level=INFO",
+          "--also-log-to-stderr",
+          "--storage-recover-on-startup=true",
+          "--telemetry-enabled=false",
+          "--storage-properties-on-edges=false",
+          "--storage-snapshot-interval-sec=0",
+          "--storage-wal-enabled=false",
+          "--query-execution-timeout-sec=0"
+        ]
         volumeMounts:
         - name: memgraph-storage
           mountPath: /var/lib/memgraph
         - name: memgraph-log
           mountPath: /var/log/memgraph
         securityContext:
-          runAsUser: 1000
-          runAsGroup: 1000
-          allowPrivilegeEscalation: false
+          runAsUser: 0
+          runAsGroup: 0
+          allowPrivilegeEscalation: true
+          capabilities:
+            add:
+              - SYS_NICE
+              - IPC_LOCK
         resources:
           requests:
             memory: "1Gi"
